Bug 212919 - Fix const issues in nsDataHashtable on MSVC7 (I'm surprised other compilers didn't barf already!) r=swalker sr=scc a=asa